# fast-csv

./: .gitignore  LICENSE  Makefile  README.md  meson.build  sample.csv
platform/linux/: fastcsv.desktop
platform/macos/: Info.plist  mac_open_bridge.mm
platform/windows/: fastcsv.rc
resources/icons/: fastcsv.icns
src/: main.cpp
